# orca-hls-utils

./: .gitignore  .pre-commit-config.yaml  README.md  TESTING_README.md  download_example.py  playlist_report.csv  pyproject.toml  requirements.txt  rough.ipynb  setup.cfg
.github/workflows/: pipy-release.yml  pypi-release.yml  test-pypi-release.yml  test.yml  test_daterangehlsstream.yml  test_hlsstream.yml
notebooks/: ReadOrcasoundCatalogue.ipynb  ReadOrcasoundInventory.ipynb  getEcholocationSegments.ipynb
src/orca_hls_utils/: DateRangeHLSStream.py  DateRangeHLSStream_bkp.py  HLSStream.py  _version.py  datetime_utils.py  s3_utils.py  scraper.py
src/orcasound-hls-utils/: scraper.py
tests/: README.md  conftest.py  test_DateRangeHLSStream.py  test_data_availability_scenarios.py  test_data_availability_scenarios_fixed.py  test_daterangehlsstream.py  test_datetime_utils.py  test_edge_cases.py  test_hlsstream.py  test_s3_utils.py
