[build-system]
requires = [
    "setuptools==70.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "tests: marks standard tests",
]
