[build-system]
requires = [
    "setuptools==70.0.0",
    "wheel",
    "setuptools_scm[toml]>=3.4"

]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
write_to = "src/orca_hls_utils/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "tests: marks standard tests",
]
