[metadata]
name = orcasound-hls-utils
version = 0.0.2
author = Example Author
author_email = author@example.com
description = Collection of utilities for getting Orcasound HLS data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/molkree/orcasound-hls-utils
project_urls =
    Bug Tracker = https://github.com/molkree/orcasound-hls-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4
    boto3
    botocore
    m3u8
    pandas
    python-ffmpeg
    pytz
    requests
    tqdm

[options.packages.find]
where = src
